<resources>
    <string name="app_name">TEJASHWINI</string>
    <string name="start_safety">START SAFETY</string>
    <string name="stop_safety">STOP SAFETY</string>
    <string name="ai_detection_off">AI Detection: OFF</string>
    <string name="ai_detection_on">AI Detection: ON</string>
    <string name="gps_off">GPS: OFF</string>
    <string name="gps_on">GPS: ON</string>
    <string name="emergency_contact_none">Emergency Contact: None</string>
    <string name="settings">Settings</string>
    <string name="trusted_contacts">Trusted Contacts</string>
    <string name="cancel_countdown">CANCEL</string>
    <string name="possible_emergency">POSSIBLE EMERGENCY</string>
    <string name="are_you_safe">Are you safe?</string>
    <string name="emergency_call">Automatic Emergency Call</string>
    <string name="remote_sos_alarm">Allow Remote SOS Alarms</string>
</resources>
